wxc/include/ewxw/wxc_glue.h

/* wxFileDialog */
TClassDefExtend(wxFileDialog,wxDialog)
TClass(wxFileDialog) wxFileDialog_Create( TClass(wxWindow) _prt, TStringVoid _msg, TStringVoid _dir, TStringVoid _fle, TStringVoid _wcd, TPoint(_lft,_top), int _stl );
TStringLen wxFileDialog_GetDirectory( TSelf(wxFileDialog) _obj, TStringOutVoid _buf );
TStringLen wxFileDialog_GetFilename( TSelf(wxFileDialog) _obj, TStringOutVoid _buf );
TArrayLen  wxFileDialog_GetFilenames( TSelf(wxFileDialog) _obj, TArrayStringOutVoid paths );
int        wxFileDialog_GetFilterIndex( TSelf(wxFileDialog) _obj );
TStringLen wxFileDialog_GetMessage( TSelf(wxFileDialog) _obj, TStringOutVoid _buf );
TStringLen wxFileDialog_GetPath( TSelf(wxFileDialog) _obj, TStringOutVoid _buf );
TArrayLen  wxFileDialog_GetPaths( TSelf(wxFileDialog) _obj, TArrayStringOutVoid paths );
int        wxFileDialog_GetStyle( TSelf(wxFileDialog) _obj );
TStringLen wxFileDialog_GetWildcard( TSelf(wxFileDialog) _obj, TStringOutVoid _buf );
void       wxFileDialog_SetDirectory( TSelf(wxFileDialog) _obj, TStringVoid dir );
void       wxFileDialog_SetFilename( TSelf(wxFileDialog) _obj, TStringVoid name );
void       wxFileDialog_SetFilterIndex( TSelf(wxFileDialog) _obj, int filterIndex );
void       wxFileDialog_SetMessage( TSelf(wxFileDialog) _obj, TStringVoid message );
void       wxFileDialog_SetPath( TSelf(wxFileDialog) _obj, TStringVoid path );
void       wxFileDialog_SetStyle( TSelf(wxFileDialog) _obj, int style );
void       wxFileDialog_SetWildcard( TSelf(wxFileDialog) _obj, TStringVoid wildCard );